[package]
name = "teal-lsp"
version = "0.1.0"
authors = ["Martin Zeller <mz.bremerhaven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "^0.14.1"
tree-sitter-teal = {version = "^0.0.1", path = "/home/xandaros/workspace/tree-sitter-teal"}
#tree-sitter-teal = {git = "https://github.com/Xandaros/tree-sitter-teal.git", branch = "merged"}
log = "^0.4.14"
serde_json = "^1.0.64"
tokio = {version = "^1.3.0", features = ["full"]}
tree-sitter = "0.19.3"
once_cell = "1.7.2"
async-recursion = "0.3.2"
anyhow = "1.0.38"
clap = "2.33.3"
regex = "1.5.4"
